Ellipsize long labels in Add Action area to avoid text overlap
Summary:
Add CSS to ellipsize long labels and disable text wrapping

Closes T15707

Test Plan:
Set a long custom "action" label in `/config/edit/maniphest.points/`; go to a Maniphest task; open all items in the "Add Action..." dropdown.

Example config:

```
{
  "enabled": true,
  "label": "Points",
  "action": "Set Points Yeah Points Points Much Points"
}
```

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15707

Differential Revision: https://we.phorge.it/D25511

--- a/webroot/rsrc/css/phui/phui-comment-form.css
+++ b/webroot/rsrc/css/phui/phui-comment-form.css
@@ -158,6 +158,9 @@ body.device .phui-box.phui-object-box.phui-comment-form-view {
   height: 28px;
   line-height: 28px;
   padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .phui-comment-form-view .aphront-form-error .phui-icon-view {
